--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The LinkedIn Client Engine by Muhammad Abdullah</title>
+    <link rel="icon" href="./gear.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       html {
