fix: added early bird offer"

--- a/index.html
+++ b/index.html
@@ -396,6 +396,13 @@
           <p class="text-5xl font-extrabold text-gray-900 mb-2">$3</p>
           <p class="text-gray-500 mb-6">One-time payment. No hidden fees.</p>
 
+          <!-- NEWLY ADDED SECTION -->
+          <div class="bg-yellow-100 border-l-4 border-yellow-500 text-yellow-800 p-4 rounded-md my-6 text-left" role="alert">
+            <p class="font-bold">Early Bird Offer!</p>
+            <p>The price will increase after the first 33 sales, so buy quickly.</p>
+          </div>
+          <!-- END OF NEWLY ADDED SECTION -->
+
           <div class="text-left my-8 space-y-3">
             <p class="flex items-center">
               <span class="text-green-500 mr-3">✔</span> The Complete PDF Guide
